--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,7 +15,14 @@ code {
 }
 
 .center-align {
-  width: 100%;
   text-align: center;
+}
+
+.flex-container {
+  display: flex;
+  min-width: 100%;
+  flex-flow: row wrap;
+  align-items: flex-start;
+  max-width: 100%; 
 }
 
