--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #1a5433; /* Green color for the poker table */
-}
+  /* background-color: #1a5433; */ /* Green color for the poker table */
+ }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -23,6 +23,19 @@ code {
   min-width: 100%;
   flex-flow: row wrap;
   align-items: flex-start;
-  max-width: 100%; 
 }
 
+.wrapper {
+  display: flex;
+  min-height: 90vh;
+  text-align: center;
+  align-items: flex-start;
+  background-image: url("../public/images/table.svg");
+  background-size: cover; 
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 20px;
+  background-position: center center;
+}
