--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -18,3 +18,10 @@
 .button1:active {
   background-color: gray;
 }
+
+button:disabled,
+button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
