--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,5 +2,7 @@ img {
   max-width: 8%;
   height: auto;
   margin: 1%;
-  box-shadow: 6px 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow:
+    6px 6px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
