--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ code {
 
 .flex-container {
   display: flex;
-  min-width: 100%;
+  width: 90%;
   flex-flow: row wrap;
   align-items: flex-start;
 }
